@@ -2,7 +2,7 @@
 
 package Message::DOM::Element;
 use strict;
-our $VERSION=do{my @r=(q$Revision: 1.2 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION=do{my @r=(q$Revision: 1.3 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 push our @ISA, 'Message::DOM::Node', 'Message::IF::Element';
 require Message::DOM::Node;
 
@@ -23,6 +23,7 @@ sub AUTOLOAD {
 
   if ({
     ## Read-only attributes (trivial accessors)
+    namespace_uri => 1,
   }->{$method_name}) {
     no strict 'refs';
     eval qq{
@@ -56,7 +57,6 @@ sub AUTOLOAD {
 
 ## The |Node| interface - attributes
 
-
 sub attributes ($) {
   my $self = shift;
   my $r = []; ## TODO: NamedNodeMap
@@ -84,12 +84,14 @@ sub text_content ($) {
 } # text_content
 
 sub local_name ($) { # TODO: HTML5 case
-  return ${+shift}->{local_name};
+  return ${$_[0]}->{local_name};
 } # local_name
 
-## Spec:
-## <http://www.w3.org/TR/2004/REC-DOM-Level-3-Core-20040407/core.html#ID-F68D095>
-## Modified: <http://www.w3.org/TR/2004/REC-DOM-Level-3-Core-20040407/core.html#ID-1841493061>
+sub manakai_local_name ($) {
+  return ${$_[0]}->{local_name};
+} # manakai_local_name
+
+sub namespace_uri ($);
 
 ## The tag name of the element [DOM1, DOM2].
 ## Same as |Element.tagName| [DOM3].
@@ -100,6 +102,11 @@ sub local_name ($) { # TODO: HTML5 case
 ## <http://www.w3.org/TR/2004/REC-DOM-Level-3-Core-20040407/core.html#ID-111237558>
 
 sub node_type ($) { 1 } # ELEMENT_NODE
+
+sub prefix ($;$) {
+  return ${+shift}->{prefix};
+## TODO: setter
+} # prefix
 
 ## The |Node| interface - method
 
@@ -221,4 +228,4 @@ sub create_element_ns ($$$) {
 
 1;
 ## License: <http://suika.fam.cx/~wakaba/archive/2004/8/18/license#Perl+MPL>
-## $Date: 2007/06/15 14:32:50 $
+## $Date: 2007/06/15 16:12:28 $
