@@ -1,3 +1,7 @@
+2007-06-16  Wakaba  <wakaba@suika.fam.cx>
+
+	* DOM-Node.t: Test data added.
+
 2007-06-15  Wakaba  <wakaba@suika.fam.cx>
 
 	* DOM-Node.t: New test.
