@@ -1,3 +1,7 @@
+2007-06-16  Wakaba  <wakaba@suika.fam.cx>
+
+	* Node.pm: First alpha version of implementation of attributes.
+
 2007-06-15  Wakaba  <wakaba@suika.fam.cx>
 
 	* ProcessingInstruction.pm, EntityReference.pm,
